[gd_scene load_steps=3 format=2]

[ext_resource path="res://debug.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextEdit" type="TextEdit" parent="HBoxContainer"]
margin_right = 770.0
margin_bottom = 600.0
size_flags_horizontal = 3
text = "Discord Embedded App SDK for Godot
(this is not a shell, terminal, or a command prompt. just for output.)
"

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_left = 774.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel/ScrollContainer"]
margin_right = 250.0
margin_bottom = 506.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="UserPanel" type="Panel" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 74 )

[node name="UserAvatar" type="TextureRect" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer/UserPanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 69.0
margin_bottom = 69.0
texture = ExtResource( 2 )
stretch_mode = 6

[node name="UserName" type="Label" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer/UserPanel"]
margin_left = 75.0
margin_top = 5.0
text = "SDK Playground"

[node name="UserId" type="Label" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer/UserPanel"]
margin_left = 75.0
margin_top = 25.0
text = "https://github.com/kuylar/
discord-embedded-godot"

[node name="ButtonCaptureLog" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_top = 78.0
margin_right = 250.0
margin_bottom = 98.0
text = "Capture Log"

[node name="ButtonEncourageHwAccel" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 250.0
margin_bottom = 122.0
text = "Encourage Hardware Accellaration"

[node name="ButtonGetChannel" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_top = 126.0
margin_right = 250.0
margin_bottom = 146.0
text = "Get Channel"

[node name="ButtonGetChannelPermissions" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 250.0
margin_bottom = 170.0
text = "Get Channel Permissions"

[node name="ButtonGetEntitlements" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 250.0
margin_bottom = 194.0
disabled = true
text = "Get Entitlements"

[node name="ButtonGetInstanceConnectedParticipants" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 250.0
margin_bottom = 218.0
text = "Get Instance Connected Participants"

[node name="ButtonGetPlatformBehaviors" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_top = 222.0
margin_right = 250.0
margin_bottom = 242.0
text = "Get Platform Behaviors"

[node name="ButtonGetSkus" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_top = 246.0
margin_right = 250.0
margin_bottom = 266.0
disabled = true
text = "Get SKUs"

[node name="ButtonInitiateImageUpload" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_top = 270.0
margin_right = 250.0
margin_bottom = 290.0
text = "Initiate Image Upload"

[node name="ButtonOpenExternalLink" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_top = 294.0
margin_right = 250.0
margin_bottom = 314.0
text = "Open External Link"

[node name="ButtonOpenInviteDialog" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_top = 318.0
margin_right = 250.0
margin_bottom = 338.0
text = "Open Invite Dialog"

[node name="ButtonOpenShareMomentDialog" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_top = 342.0
margin_right = 250.0
margin_bottom = 362.0
text = "Open Share Moment Dialog"

[node name="ButtonSetActivity" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_top = 366.0
margin_right = 250.0
margin_bottom = 386.0
text = "Set Activity"

[node name="ButtonSetConfig" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_top = 390.0
margin_right = 250.0
margin_bottom = 410.0
text = "Set Config"

[node name="ButtonSetOrientationLockState" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_top = 414.0
margin_right = 250.0
margin_bottom = 434.0
text = "Set Orientation Lock State"

[node name="ButtonStartPurchase" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_top = 438.0
margin_right = 250.0
margin_bottom = 458.0
disabled = true
text = "Start Purchase"

[node name="ButtonUserSettingsGetLocale" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_top = 462.0
margin_right = 250.0
margin_bottom = 482.0
text = "Get User Locale"

[node name="ButtonQuit" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
margin_top = 486.0
margin_right = 250.0
margin_bottom = 506.0
text = "Quit"

[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonCaptureLog" to="." method="_on_ButtonCaptureLog_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonEncourageHwAccel" to="." method="_on_ButtonEncourageHwAccel_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonGetChannel" to="." method="_on_ButtonGetChannel_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonGetChannelPermissions" to="." method="_on_ButtonGetChannelPermissions_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonGetEntitlements" to="." method="_on_ButtonGetEntitlements_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonGetInstanceConnectedParticipants" to="." method="_on_ButtonGetInstanceConnectedParticipants_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonGetPlatformBehaviors" to="." method="_on_ButtonGetPlatformBehaviors_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonGetSkus" to="." method="_on_ButtonGetSkus_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonInitiateImageUpload" to="." method="_on_ButtonInitiateImageUpload_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonOpenExternalLink" to="." method="_on_ButtonOpenExternalLink_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonOpenInviteDialog" to="." method="_on_ButtonOpenInviteDialog_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonOpenShareMomentDialog" to="." method="_on_ButtonOpenShareMomentDialog_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonSetActivity" to="." method="_on_ButtonSetActivity_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonSetConfig" to="." method="_on_ButtonSetConfig_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonSetOrientationLockState" to="." method="_on_ButtonSetOrientationLockState_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonStartPurchase" to="." method="_on_ButtonStartPurchase_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonUserSettingsGetLocale" to="." method="_on_ButtonUserSettingsGetLocale_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
